fixed current page/dropdown not showing on page loads

--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -119,7 +119,7 @@ main.body-open {
 }
 .dropdown span::before,
 .dropdown.open span::before,
-.dropdown.current-folder span::after {
+.dropdown.current-dropdown span::after {
   font-family: 'Font Awesome\ 5 Free';
   font-weight: 900;
   margin-right: .2rem;
@@ -127,7 +127,7 @@ main.body-open {
 .dropdown span::before {
   content: "\f105";
 }
-.dropdown.current-folder span::before {
+.dropdown.current-dropdown span::before {
   color: hsl(5, 48%, 51%);
 }
 .dropdown.open span::before {
